@@ -1,3 +1,7 @@
+== 10 Jan 2014 ==
+
+gperftools 2.4 is out! The code is exactly same as 2.4rc.
+
 == 28 Dec 2014 ==
 
 gperftools 2.4rc is out!
